[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
name = "aws-adfs"
version = "2.1.0-alpha.1"
description = "AWS CLI authenticator via ADFS - small command-line tool to authenticate via ADFS and assume chosen role"
keywords = ["aws", "adfs", "console", "tool"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
]
authors = ["Venth <artur.krysiak.warszawa@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
aws-adfs = "aws_adfs.commands:cli"

[tool.poetry.dependencies]
python = "^3.6.2"
boto3 = "^1.20.50"
botocore = ">=1.12.6"
click = "*"
configparser = "*"
fido2 = ">=0.9.3"
lxml = "*"
requests = "*"
requests-kerberos = [
    { version = "*", markers = "platform_system != 'Windows'" },
]
requests-negotiate-sspi = [
    { version = ">=0.3.4", markers = "platform_system == 'Windows'" },
]

[tool.poetry.dev-dependencies]
black = "^22.3.0"
coverage = "<7"
pytest = "^7.0.1"
toml = "^0.10.2"

[tool.black]
# Make sure to match flake8's max-line-length in tox.ini.
line-length = 130          # black's default is 88
target-version = ['py310']
