[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
name = "aws-adfs"
version = "2.6.1"
description = "AWS CLI authenticator via ADFS - small command-line tool to authenticate via ADFS and assume chosen role"
keywords = ["aws", "adfs", "console", "tool"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
]
authors = ["Venth <artur.krysiak.warszawa@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
aws-adfs = "aws_adfs.commands:cli"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.24"
botocore = "^1.23"
click = "^8.0"
configparser = "5.3.0"
fido2 = "^1.0"
lxml = "^4.9"
requests = "^2.27"
requests-kerberos = [
    { version = "^0.14", markers = "platform_system != 'Windows'" },
]
requests-negotiate-sspi = [
    { version = "^0.5", markers = "platform_system == 'Windows'" },
]

[tool.poetry.group.dev.dependencies]
black = "^22.10"
coverage = "^6.5"
pre-commit = "^2.20.0"
pytest = "^7.2"
toml = "^0.10"

[tool.black]
line-length = 130          # black's default is 88
target-version = ['py310']
